--- a/views/pages/leaderboard.ejs
+++ b/views/pages/leaderboard.ejs
@@ -8,7 +8,7 @@
             <tr>
                 <th class="py-2 px-4 border-b">Rank</th>
                 <th class="py-2 px-4 border-b">Username</th>
-                <th class="py-2 px-4 border-b">Score</th>
+                <th class="py-2 px-4 border-b">High Score</th>
                 <th class="py-2 px-4 border-b">Games Played</th>
             </tr>
         </thead>
